force-app/main/default/objects/Rendement__c/Rendement__c.object-meta.xml
<CustomObject>
    <description>Objet pour gérer les rendements</description>
    <label>Rendement</label>
    <nameField>
        <displayFormat>REND-{0000}</displayFormat>
        <label>Numéro de rendement</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rendements</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>