force-app/main/default/objects/Rendement__c/fields/Annee__c.field-meta.xml
<CustomField>
    <fullName>Annee__c</fullName>
    <label>Année</label>
    <type>Text</type>
    <length>4</length>
</CustomField>