force-app/main/default/objects/Rendement__c/fields/Bien_Locatif__c.field-meta.xml
<CustomField>
    <fullName>Bien_Locatif__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Bien locatif associé au rendement</description>
    <label>Bien Locatif</label>
    <referenceTo>Bien_Locatif__c</referenceTo>
    <relationshipLabel>Rendements</relationshipLabel>
    <relationshipName>Rendements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>