force-app/main/default/objects/Rendement__c/fields/Depenses_Totales__c.field-meta.xml
<CustomField>
    <fullName>Depenses_Totales__c</fullName>
    <label>Dépenses Totales</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>