force-app/main/default/objects/Rendement__c/fields/Rendement_Brut__c.field-meta.xml
<CustomField>
    <fullName>Rendement_Brut__c</fullName>
    <label>Rendement Brut</label>
    <type>Percent</type>
    <precision>3</precision>
    <scale>2</scale>
</CustomField>