force-app/main/default/objects/Rendement__c/fields/Revenus_Totaux__c.field-meta.xml
<CustomField>
    <fullName>Revenus_Totaux__c</fullName>
    <label>Revenus Totaux</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>