force-app/main/default/objects/Rendement__c/fields/Total_Charges_Percues__c.field-meta.xml
<CustomField>
    <fullName>Total_Charges_Percues__c</fullName>
    <label>Total Charges Perçues</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>