force-app/main/default/objects/Rendement__c/fields/Total_Depenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Depenses__c</fullName>
    <label>Total Depenses</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>