force-app/main/default/objects/Rendement__c/fields/Total_Loyers__c.field-meta.xml
<CustomField>
    <fullName>Total_Loyers__c</fullName>
    <label>Total Loyers</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>